# miniGit

./: CMakeLists.txt  README.md  main.cpp  minigit.cpp  minigit.h
my-test-project/: hello.txt  hello2.txt
my-test-project/.minigit/: HEAD
my-test-project/.minigit/objects/: 35dcb5887ddad5ff  59a24d41a748f74d  71847df193e8b3f5  89a20512d556fa0a  fcc25aba0fb872fa
test_repo/.minigit/: HEAD
test_repo/.minigit/objects/: 41889c5ad4d4f363  509233afba25f264  9b2910a6e7a7fcd5  bc6f3be811873a  f25785bcd1404272
